tests/invalid/cycle_a.h
#ifndef CYCLE_A_H
#define CYCLE_A_H
#include "cycle_b.h"
#endif
